# portainer-py

./: .coveragerc  .gitignore  .travis.yml  LICENSE-APACHE  LICENSE-MIT  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
docker/: Dockerfile
pip-wheel-metadata/portainer_py.dist-info/: METADATA  entry_points.txt  top_level.txt
portainer_py/: __init__.py  cli.py  portainer.py
portainer_py/api_versions/: __init__.py  exceptions.py  portainer_1_17.py  portainer_1_18.py  portainer_base.py
tests/: test_cli.py  test_version_finder.py
