[metadata]
name = 'portainer-py'
version = '0.1.0'
description = 'Package to help deploy projects to portainer'
author = 'Bob Vork'
author_email = 'bob@theothersonline.eu'
license = 'MIT'
url = 'https://github.com/_/portainer-py'

[requires]
python_version = ['3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
